# social-networking-api

./: .env.example  .gitignore  Makefile  Procfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test_and_linter_check.yaml
api/: cache.py  db.py  main.py  models.py  settings.py
api/posts/: models.py  routes.py  schemes.py  services.py
api/users/: models.py  routes.py  schemes.py  services.py
tests/: conftest.py  test_posts_routes.py  test_users_routes.py
