[tool.poetry]
name = "social-network-api"
version = "0.1.0"
description = ""
authors = ["a.cheremushkin <a.ch3re359@yandex.ru>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.46"
python-dotenv = "^0.21.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
psycopg2 = "^2.9.5"
bcrypt = "^4.0.1"
cryptography = "^39.0.0"
jose = "^1.0.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.10.4"}
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.18.0"
isort = "^5.11.4"
loguru = "^0.6.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
